Refactor records to classes and add new Minecraft version support